0.9.95:
-Add: Updated czech translation (by Pavel Fric)
-Change: Close soundkonverter if --autoclose was passed, even if the main window is visible
-Fix: Display correct conversion options in the conversion options editor with multiple files selected
-Fix: Apply output directory to the conversion options input widget
-Fix: Don't update conversion options or tags in the conversion options editor with multiple files selected if they don't match
-Fix: Make edit conversion options/tags buttons in the conversion options editor work
-Fix: Fix possible crash in the log viewer

0.9.94 (1.0.0 rc2):
-Add: Updated czech translation (by Pavel Fric)
-Fix: Tint items in the Replay Gain scanner red while calculating Replay Gain
-Fix: Make the Replay Gain scanner skip file with calculated tags
-Fix: Ensure items in the file list and Replay Gain file list get redrawn after an update
-Fix: Hide open directory dialog before scanning the directory to show the progressbar
-Fix: Don't crash when deleting file list items
-Fix: Don't recognize vorbis files as flac
-Fix: Call lame with correct --abr and --cbr parameters

0.9.93 (1.0.0 rc1):
-Add: Video formats for ffmpeg and mplayer
-Add: German translation
-Change: Re-enable the CD ripper (using paranoia again)
-Change: Save frames properly when generating cuesheet files
-Fix: Retry conversion if file output size is too small
-Fix: Delete temp files properly if a conversion pipe failed
-Fix: alac extensions
-Fix: Some bugs in the CD ripper dialog
-Fix: Drag'n'drop directories wouldn't work
-Fix: Make shortcuts work

0.9.92 (1.0.0 beta3):
-Add: User defined command line arguments for lame and some new plugins
-Add: User defined command to execute after a file has been converted
-Add: Create action menus for the file manager
-Add: Flake plugin
-Add: TwoLame plugin (Warning: Corrupted a file while testing)
-Add: Monkey's Audio Compressor plugin
-Add: WavPack and Wv Gain plugin
-Add: shorten plugin
-Add: MusePack codec and replaygain plugins